--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-qrcode-reader": "^2.0.3",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
