--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "axios": "^0.19.0",
-    "express": "^4.17.1",
-    "serve-static": "^1.14.1",
     "core-js": "^2.6.5",
+    "express": "^4.17.1",
+    "qrcode": "^1.4.1",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.10",
     "vue-qrcode-reader": "^2.0.3",
     "vue-router": "^3.0.3"
